Overview of changes in snapd-glib 1.29

    * New API:
      - snapd_client_get_changes_async
      - snapd_client_get_changes_finish
      - snapd_client_get_changes_sync
    * Implement snapd_client_get_changes

Overview of changes in snapd-glib 1.28

    * Fix crash on 32 bit architectures

Overview of changes in snapd-glib 1.27

    * Fix crash accessing freed memory
    * Fix small memory leaks

Overview of changes in snapd-glib 1.26

    * New API:
      - snapd_client_login2_async
      - snapd_client_login2_finish
      - snapd_client_login2_sync
      - snapd_client_switch_async
      - snapd_client_switch_finish
      - snapd_client_switch_sync
      - snapd_client_get_users_async
      - snapd_client_get_users_finish
      - snapd_client_get_users_sync
    * Deprecated API:
      - snapd_client_login_async
      - snapd_client_login_finish
      - snapd_client_login_sync
    * Implement snapd_client_switch
    * Implement snapd_client_get_users
    * Implement new login API
    * Mark deprecated Qt API

Overview of changes in snapd-glib 1.25

    * New API:
      - snapd_client_alias_async
      - snapd_client_alias_finish
      - snapd_client_alias_sync
      - snapd_client_unalias_async
      - snapd_client_unalias_finish
      - snapd_client_unalias_sync
      - snapd_client_prefer_async
      - snapd_client_prefer_finish
      - snapd_client_prefer_sync
      - snapd_client_get_apps_sync
      - snapd_client_get_apps_finish
      - snapd_client_get_apps_async
      - snapd_alias_get_app_auto
      - snapd_alias_get_command
      - snapd_alias_get_app_manual
      - snapd_app_get_active
      - snapd_app_get_enabled
      - snapd_app_get_snap
      - snapd_snap_get_broken
    * Deprecated API:
      - snapd_client_enable_aliases_async
      - snapd_client_enable_aliases_finish
      - snapd_client_enable_aliases_sync
      - snapd_client_disable_aliases_async
      - snapd_client_disable_aliases_finish
      - snapd_client_disable_aliases_sync