@@ -120,6 +120,9 @@ snapd_client_get_auth_data
 snapd_client_get_changes_sync
 snapd_client_get_changes_async
 snapd_client_get_changes_finish
+snapd_client_get_change_sync
+snapd_client_get_change_async
+snapd_client_get_change_finish
 snapd_client_get_system_information_sync
 snapd_client_get_system_information_async
 snapd_client_get_system_information_finish
